--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,8 @@
   </div>
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
+    <button class="btn" onclick="Name()">Name</button>
+    
   </div>
   <div id="message">message area</div>
 </body>
