levelボタンの追加

--- a/www/index.html
+++ b/www/index.html
@@ -62,7 +62,7 @@
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
     <button class="btn" onclick="Name()">Name</button>
-    
+    <button class="btn" onclick="Level()">Level</button>
   </div>
   <div id="message">message area</div>
 </body>
