--- a/www/index.html
+++ b/www/index.html
@@ -22,12 +22,20 @@
           showResults(results);
         })
     }
+
     function searchName(){
         let name = $("#name").val();
         let TestDataClass = ncmb.DataStore(db);
         TestDataClass.equalTo("name", name).fetchAll().then(function(results){
             showResults(results);
         })
+    }
+    function searchLevel() {
+         let level = parseInt($("#name").val());
+         let TestDataClass = ncmb.DataStore(db);
+         TestDataClass.equalTo("level", level).fetchAll().then(function(results){
+             showResults(results);
+         })
     }
 
     function showResults(results) {
