Level検索＜のボタンの追加、searchボタンの修正

--- a/www/index.html
+++ b/www/index.html
@@ -69,8 +69,10 @@
   </div>
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
-    <button class="btn" onclick="Name()">Name</button>
-    <button class="btn" onclick="Level()">Level</button>
+    <button class="btn" onclick="searchName()">Name</button><br>
+    <button class="btn" onclick="searchLevelLT()">Level &lt</button>
+    <button class="btn" onclick="searchLevel()">Level</button></div>
+    
   </div>
   <div id="message">message area</div>
 </body>
