--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,14 @@
       msg += "</table>";
       $("#message").html(msg);
     }
+
+    function searchLevelLT (){
+        let level = parseInt($("#level").val());
+        let TestDataClass = ncmb.DataStore(db);
+        TestDataClass.lessThan("level", level).fetchAll().then(function(results){
+            showResults(results);
+        })
+    }
   </script>
 </head>
 
