level処理の訂正

--- a/www/index.html
+++ b/www/index.html
@@ -30,8 +30,9 @@
             showResults(results);
         })
     }
+
     function searchLevel() {
-         let level = parseInt($("#name").val());
+         let level = parseInt($("#level").val());
          let TestDataClass = ncmb.DataStore(db);
          TestDataClass.equalTo("level", level).fetchAll().then(function(results){
              showResults(results);
